--- a/config/samples/cnat_v1alpha1_at.yaml
+++ b/config/samples/cnat_v1alpha1_at.yaml
@@ -1,7 +1,9 @@
 apiVersion: cnat.programming-k8s.info/v1alpha1
 kind: At
 metadata:
-  name: at-sample
+  name: example-at
+  labels: 
+    controller-tools.k8s.io: "1.0"
 spec:
-  # Add fields here
-  foo: bar
+  schedule: "2020-10-12T10:12:00Z"
+  command: "echo YaY"
